try button wrap phone fix

--- a/style.css
+++ b/style.css
@@ -145,8 +145,9 @@ a:link, a:visited {
     font-size: 16px;
 }
 
+/* Sign-up button default state */
 .sign-up-button {
-    background-color: green;
+    background-color: #1a7f37;
     color: white;
     border: none;
     height: 44px;
@@ -155,13 +156,17 @@ a:link, a:visited {
     cursor: pointer;
     border-radius: 6px;
     margin-right: 3px;
-    margin-bottom: -0px;
-    font-size: 16px;
+    margin-bottom: 0px;
+    width: fit-content;
+    font-size: calc(1vw + 0.4vh);
+    transition: background-color 0.3s ease-in-out; /* Smooth color transition */
 }
 
+/* Hover state */
 .sign-up-button:hover {
-    background-color: #1a7f37;
+    background-color: #116329; /* Darker green on hover */
 }
+
 
 .fade-in {
     opacity: 0;
